--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <button id="resetBtn" onclick="reset()">Reset</button>
       </div>
     </div>
-
+    <audio
+      id="alertSound"
+      src="Suara woi ganti (Romi).m4a"
+      preload="auto"
+    ></audio>
+    <audio id="alertSound1" src="Selesai (Romi).m4a" preload="auto"></audio>
     <script src="main.js"></script>
   </body>
 </html>
